// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`quotes.html - {"embeddedLanguageFormatting":"off"} format 1`] = `
====================================options=====================================
embeddedLanguageFormatting: "off"
parsers: ["lwc"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<div double-quoted="{data}"    single-quoted='{data}'
unquoted={data}>   </div>

<div class="{data}"    class='{data}'
class={data}>   </div>

<div
  in-single-quote="'&apos;&quot;"
  in-double-quote='"&apos;&quot;'
  escaped-unquoted=&apos;&quot;
  escaped-in-single-quote='&apos;&quot;'
  escaped-in-double-quote="&apos;&quot;"
  style="width:                         100px;"
></div>

=====================================output=====================================
<div double-quoted="{data}" single-quoted="{data}" unquoted={data}></div>

<div class="{data}" class="{data}" class={data}></div>

<div
  in-single-quote="''&quot;"
  in-double-quote='"&apos;"'
  escaped-unquoted="'&quot;"
  escaped-in-single-quote="'&quot;"
  escaped-in-double-quote="'&quot;"
  style="width:                         100px;"
></div>

================================================================================
`;

exports[`quotes.html format 1`] = `
====================================options=====================================
parsers: ["lwc"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<div double-quoted="{data}"    single-quoted='{data}'
unquoted={data}>   </div>

<div class="{data}"    class='{data}'
class={data}>   </div>

<div
  in-single-quote="'&apos;&quot;"
  in-double-quote='"&apos;&quot;'
  escaped-unquoted=&apos;&quot;
  escaped-in-single-quote='&apos;&quot;'
  escaped-in-double-quote="&apos;&quot;"
  style="width:                         100px;"
></div>

=====================================output=====================================
<div double-quoted="{data}" single-quoted="{data}" unquoted={data}></div>

<div class="{data}" class="{data}" class={data}></div>

<div
  in-single-quote="''&quot;"
  in-double-quote='"&apos;"'
  escaped-unquoted="'&quot;"
  escaped-in-single-quote="'&quot;"
  escaped-in-double-quote="'&quot;"
  style="width: 100px"
></div>

================================================================================
`;
